test/classes/diten/multipledestructor.good
multipledestructor.chpl:7: error: ambiguous call 'C.chpl__deinit()'
multipledestructor.chpl:2: note: candidates are: C.~C()
multipledestructor.chpl:4: note:                 C.~C()
